feat: common nats interface